# Machine-Learning-Course-Lab

./: .gitignore  README.md  pyproject.toml
Part 1 - Data Preprocessing/: data_preprocessing_tools.ipynb
Part 10 - Model Selection & Boosting/Section 48 - Model Selection/: grid_search.ipynb  k_fold_cross_validation.ipynb
Part 10 - Model Selection & Boosting/Section 49 - XGBoost/: xg_boost.ipynb
Part 2 - Regression/Section 4 - Simple Linear Regression/: simple_linear_regression.ipynb
Part 2 - Regression/Section 5 - Multiple Linear Regression/: multiple_linear_regression.ipynb
Part 2 - Regression/Section 6 - Polynomial Regression/: polynomial_regression.ipynb
Part 2 - Regression/Section 7 - Support Vector Regression (SVR)/: support_vector_regression.ipynb
Part 2 - Regression/Section 8 - Decision Tree Regression/: decision_tree_regression.ipynb
Part 2 - Regression/Section 9 - Random Forest Regression/: random_forest_regression.ipynb
Part 3 - Classification/Section 14 - Logistic Regression/: logistic_regression.ipynb
Part 3 - Classification/Section 15 - K-Nearest Neighbors (K-NN)/: k_nearest_neighbors.ipynb
Part 3 - Classification/Section 16 - Support Vector Machine (SVM)/: support_vector_machine.ipynb
Part 3 - Classification/Section 17 - Kernel SVM/: kernel_svm.ipynb
Part 3 - Classification/Section 18 - Naive Bayes/: naive_bayes.ipynb
Part 3 - Classification/Section 19 - Decision Tree Classification/: decision_tree_classification.ipynb
Part 3 - Classification/Section 20 - Random Forest Classification/: random_forest_classification.ipynb
(+12 files in other folders)
