[tool.poetry]
name = "machine-learning-course"
version = "0.1.0"
description = "Machine Learning Course"
authors = ["Maruf Bepary <bepary71@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyterhub = "^4.0.2"
jupyter = "^1.0.0"
numpy = "^1.26.1"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
scipy = "^1.14.0"
apyori = "^1.1.2"
nltk = "^3.8.1"
tensorflow = "^2.16.2"
keras = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
